--- a/about.Rmd
+++ b/about.Rmd
@@ -1,27 +1,42 @@
 ---
-title: "Frank Hermosillo"
-image: "frank.jpg"
+title: "Gonzalo Pérez-Rosales"
+image: "Profile_Portrait.jpg"
 links:
-  - label: LinkedIn
-    url: "https://linkedin.com/"
-  - label: Twitter
-    url: "https://twitter.com/"
-  - label: GitHub
-    url: "https://github.com/"
   - label: Email
-    url: "mailto:email@email.com"
+    url: "gonzalo.prb@gmail.com"
+  - label: Twitter
+    url: "https://twitter.com/Perez_Rosales_G"
+  - label: Instagram
+    url: "https://www.instagram.com/gon_perezrosales/?hl=en"
+  - label: Facebook
+    url: "https://www.facebook.com/gonzalo.perezrosalesblanch"
+  - label: GoogleScholar
+    url: "https://scholar.google.com/citations?user=qLfSUS4AAAAJ&hl=en"
+  - label: GitHub
+    url: "https://github.com/gonzaloprb"
+  - label: LinkedIn
+    url: "https://www.linkedin.com/in/gonzalo-p%C3%A9rez-rosales-40a963b1/"
+  - label: Orcid
+    url: "https://twitter.com/Perez_Rosales_G"
 output:
   postcards::trestles
 ---
  
 ## Bio
 
-Frank Hermosillo studies neural networks and their applications at Google 
-Brain. His research focuses on differentiable network pruning approximation and 
-decentralized gradient inversion mechanics. He frequently collaborates with 
-researchers who study machine learning, computer vision, and cognitive science.
-His work has been featured in WIRED, The Atlantic, Newsweek, and The New York 
-Times Magazine.
+## Bio
+
+Dr. Gonzalo Pérez-Rosales is a quantitative coral reef ecologist, oceanographer and TEK Diver with a high interest in the depth gradient of marine ecosystems. 
+
+After a B.Sc. in Marine Science – Oceanography in the Canary Islands, I moved to Australia, where I joined the amazing world of Coral Reefs. Following academic volunteering programs and after being a fieldwork team member for "Chasing Coral", I committed myself to the world of Coral Reefs Research and Communication. 
+Finishing a M.Sc. in Biodiversity and Environmental Management of Coral Reefs between France and French Polynesia. 
+I completed a Ph.D. at EPHE-PSL at the CRIOBE focusing on the Mesophotic Coral Ecosystems of French Polynesia, again between French Polynesia and France.
+During my thesis entitled: **Diving deep on the reef slopes in French Polynesia: new insights into mesophotic coral ecosystems.** I was under the supervision of Laetitia Hédouin and Valeriano Parravicini. This thesis was possible thanks to the DEEPHOPE expedition and project with the Under The Pole team, for which I was an offshore scientist collecting data for my thesis and for others. The thesis was mostly carried out in French Polynesia. 
+
+I am currently looking for PostDoc opportunities. 
+My ultimate goal is to provide empirical research and tools for science-based decision actions for the oceans' future with global changes.
+
+
 
 ## Education
 
