--- a/blog.Rmd
+++ b/blog.Rmd
@@ -2,7 +2,7 @@
 title: "Blog"
 image: "Profile_Portrait.jpg"
 output:
-  postcards::jolla
+  postcards::trestles
 ---
  
 Blogs will be available soon.
