--- a/about.Rmd
+++ b/about.Rmd
@@ -38,16 +38,16 @@ My ultimate goal is to provide empirical research and tools for science-based de
 
 ## Education
 
-**Massachusetts Institute of Technology** | Cambridge, MA
+**EPHE** | Cambridge, MA
 
-Ph.D. in Computer Science | September 2009 - May 2014
+Ph.D. Marine Biology | XXX
 
-**The University of California, Berkeley** | Berkeley, CA
+**University** | Canarias
 
 B.S. in Computer Science | September 2005 - May 2009
 
 ## Experience
 
-**Google Brain** | Principal Investigator | January 2018 - Present
+**UTP** | Principal Investigator | 
 
-**Netflix** | Research Scientist | June 2014 - December 2017
+
