--- a/about.Rmd
+++ b/about.Rmd
@@ -38,16 +38,23 @@ My ultimate goal is to provide empirical research and tools for science-based de
 
 ## Education
 
-**EPHE** | Cambridge, MA
+**École Pratique des Hautes Études** | French Polynesia and France
 
-Ph.D. Marine Biology | XXX
+Ph.D. Marine Biology | 2018 - 2022
+Diving deep on the reef slopes in French Polynesia:  new insights into mesophotic coral ecosystems
 
-**University** | Canarias
+**École Pratique des Hautes Études** | France
 
-B.S. in Computer Science | September 2005 - May 2009
+M.S.c Biodiversity and environmental management | 2016 - 2018
+
+**University of Las Palmas de Gran Canaria** | Spain
+
+B.S.c in Marine Science & Oceanography | 2010 - 2014 
 
 ## Experience
 
-**UTP** | Principal Investigator | 
+**Under The Pole** | Fieldwork scientist | 2018 - 2019
+
+**CRIOBE** | PhD candidate and Master internship | 2016 - 2022 
 
 
