--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "gprb"
+image: "Rebreater.jpg"
 description: |
   Welcome to the website. I hope you enjoy it!
 site: distill::distill_website
