--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "gprb"
 image: "Rebreater.jpg"
 description: |
-  Welcome to the website. I hope you enjoy it!
+  Welcome to the website. I hope you enjoy it! Thanks for exploring!
 site: distill::distill_website
 ---
 
