--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,8 @@ description: |
  
   I am a coral reef ecologist and oceanographer.
   
+
+  
 author:
   - name: Gonzalo Pérez-Rosales, Phd
     url: https://gonzaloperezrosales.netlify.app/
@@ -11,6 +13,9 @@ author:
     affiliation_url: http://www.criobe.pf/pro/personnel/doctorants/gonzalo-perez-rosales/
 site: distill::distill_website
 ---
+
+![](Profile_Portrait.jpg){width=15}
+
 
 ```{r layout = "l-screen", echo=FALSE}
 knitr::include_graphics("Rebreather.jpg")
