--- a/about.Rmd
+++ b/about.Rmd
@@ -2,19 +2,19 @@
 title: "Gonzalo Pérez-Rosales"
 image: "Profile_Portrait.jpg"
 links:
-  - label: Email
+  - label: '<i class="fas fa-envelope"></i> Email'
     url: "gonzalo.prb@gmail.com"
-  - label: Twitter
+  - label: '<i class="fab fa-twitter fa-lg"></i> Twitter'
     url: "https://twitter.com/Perez_Rosales_G"
   - label: Instagram
     url: "https://www.instagram.com/gon_perezrosales/?hl=en"
   - label: Facebook
     url: "https://www.facebook.com/gonzalo.perezrosalesblanch"
-  - label: GoogleScholar
+  - label: '<i class="fas fa-graduation-cap"></i> Google Scholar'
     url: "https://scholar.google.com/citations?user=qLfSUS4AAAAJ&hl=en"
-  - label: GitHub # icon: fa fa-github
+  - label: '<i class="fab fa-github"></i> GitHub'
     url: "https://github.com/gonzaloprb"
-  - label: LinkedIn
+  - label: '<i class="fab fa-linkedin fa-lg"></i> LinkedIn'
     url: "https://www.linkedin.com/in/gonzalo-p%C3%A9rez-rosales-40a963b1/"
   - label: Orcid
     url: "https://twitter.com/Perez_Rosales_G"
