--- a/index.Rmd
+++ b/index.Rmd
@@ -1,15 +1,11 @@
 ---
 title: "Gonzalo Pérez-Rosales, PHD"
-description: | 
-  I am a coral reef ecologist and oceanographer.
-  
-  Postdoctoral Investigator at Woods Hole Oceanographic Institution https://www.whoi.edu/
+description: I am a coral reef ecologist and oceanographer. 
 site: distill::distill_website
 ---
+##         Postdoctoral Investigator at Woods Hole Oceanographic Institution [WHOI](https://www.whoi.edu/)
 
-
-# My goal is to use quantiative ecology tools for the conservation planning of coral reefs.
-
+My goal is to use quantiative ecology tools for the conservation planning of coral reefs.
 
 ```{r layout = "l-page", echo=FALSE}
 knitr::include_graphics("Rebreather.jpg")
