--- a/about.Rmd
+++ b/about.Rmd
@@ -41,6 +41,12 @@ My ultimate goal is to provide empirical research and tools for science-based co
 
 ## Education
 
+**Woods Hole Oceanographic Institution** | Cape Cod, Massachussets, United States
+
+Postdoctoral Investigator | 2022 - 2024
+Work on the [Super Reefs Project](https://superreefs.whoi.edu/).
+
+
 **École Pratique des Hautes Études** | French Polynesia and France
 
 Ph.D. Marine Biology | 2018 - 2022
