--- a/blog.Rmd
+++ b/blog.Rmd
@@ -68,7 +68,7 @@ To finish, I must say that replacing being underwater with coding gives me anoth
 
 
 
-## Making it to the cover of journals around the world 
+## Making it to the cover of newspapers around the world 
 
 Richard Vevers [The ocean Agency](https://www.theoceanagency.org/) took this picture of me while filming bleaching on Lizard Island during the production of [Chasing Coral](https://www.chasingcoral.com/). Since then, this picture has been featured in many international journals, including the New York Times, BBC, The Guardian, etc. The experience with Chasing Coral convinced me how important communication is for scientists. I firmly believe the general public should know what we are doing as scientists. People have the right to be aware, and we must pass the message, so please reach out if you work in science communication. 
 
