--- a/research.Rmd
+++ b/research.Rmd
@@ -18,23 +18,25 @@ My current and future research will be working on the [Super Reefs Project](http
 ## List of publications 
 
 
-Pérez-Rosales G, Brandl SJ, Chancerelle Y, Siu G, Martinez E, Parravicini V, Hédouin L. (2021) Documenting decadal disturbance dynamics reveals archipelago-specific recovery and compositional change on Polynesian reefs. Marine Pollution Bulletin; 170:112659. https://doi.org/10.1016/j.marpolbul.2021.112659
+**Pérez-Rosales G**, Brandl SJ, Chancerelle Y, Siu G, Martinez E, Parravicini V, Hédouin L. (2021) Documenting decadal disturbance dynamics reveals archipelago-specific recovery and compositional change on Polynesian reefs. Marine Pollution Bulletin; 170:112659. https://doi.org/10.1016/j.marpolbul.2021.112659
 
-Pérez-Rosales G, Rouzé H, Torda G, Bongaerts P, Pichon M, Parravicini V, Hédouin L. (2021) Mesophotic coral communities escape thermal coral bleaching in French Polynesia. R. Soc. Open Sci. 8: 210139. https://doi.org/10.1098/rsos.210139
+**Pérez-Rosales G**, Rouzé H, Torda G, Bongaerts P, Pichon M, Parravicini V, Hédouin L. (2021) Mesophotic coral communities escape thermal coral bleaching in French Polynesia. R. Soc. Open Sci. 8: 210139. https://doi.org/10.1098/rsos.210139
 
-Pérez-Rosales G, Pichon M, Rouzé H, Villeger S, Toda G, Carlot J, Bongaerts P, UTP Consortium, Parravicini V, Hédouin L. (2022) Mesophotic coral ecosystems of French Polynesia are hotspots of alpha and beta generic diversity for scleractinian assemblages. Diversity & Distribution https://doi.org/10.1111/ddi.13549
+**Pérez-Rosales G**, Pichon M, Rouzé H, Villeger S, Toda G, Carlot J, Bongaerts P, UTP Consortium, Parravicini V, Hédouin L. (2022) Mesophotic coral ecosystems of French Polynesia are hotspots of alpha and beta generic diversity for scleractinian assemblages. Diversity & Distribution https://doi.org/10.1111/ddi.13549
 
-Bongaerts P, Perez-Rosales G, Radice VZ, Eyal G, Gori A, Gress E, Hammerman NM, Hernandez-Agreda A, Laverick J, Muir P, Pinheiro H. (2019) Mesophotic.org: a repository for scientific information on mesophotic ecosystems. Oxford Database; https://doi.org/10.1093/database/baz140
+**Pérez-Rosales G**, Hernández-Agreda A, Bongaerts P, Rouzé H, Pichon M, Carlot J, Torda G, UTP Consortium, Hédouin L, Parravicini V. (2022) Mesophotic depths hide high coral cover communities in French Polynesia. Science of the Total Environment https://doi.org/10.1016/j.scitotenv.2022.157049 
 
-Hédouin L, Rouzé H, Berthe C, Pérez-Rosales G, Martinez E, Chancerelle Y, Galand PE, Lerouvreur F, Nugues MM, Pochon X, Siu G. (2020) Contrasting patterns of mortality in Polynesian coral reefs following the third global coral bleaching event in 2016. Coral Reefs; 39(4):939-52. https://doi.org/10.1007/s00338-020-01914-w
+Bongaerts P, **Perez-Rosales G**, Radice VZ, Eyal G, Gori A, Gress E, Hammerman NM, Hernandez-Agreda A, Laverick J, Muir P, Pinheiro H. (2019) Mesophotic.org: a repository for scientific information on mesophotic ecosystems. Oxford Database; https://doi.org/10.1093/database/baz140
 
-Rouzé H, Galand PE, Medina M, Bongaerts P, Pichon M, Pérez-Rosales G, Torda G, Moya A, Raina JB, Hédouin L. (2021) Symbiotic associations of the deepest recorded photosynthetic scleractinian coral (172 m depth). The ISME journal; 15(5):1564-8. https://doi.org/10.1038/s41396-020-00857-y
+Hédouin L, Rouzé H, Berthe C, **Pérez-Rosales G**, Martinez E, Chancerelle Y, Galand PE, Lerouvreur F, Nugues MM, Pochon X, Siu G. (2020) Contrasting patterns of mortality in Polynesian coral reefs following the third global coral bleaching event in 2016. Coral Reefs; 39(4):939-52. https://doi.org/10.1007/s00338-020-01914-w
 
-Moritz C, Brandl SJ, Rouzé H, Vii J, Pérez-Rosales G, Bosserelle P, Chancerelle Y, Galzin R, Liao V, Siu G, Taiarui M, Nugues MM, Hédouin L. (2021) Long-term monitoring of benthic communities reveals spatial determinants of disturbance and recovery dynamics on coral reefs. Mar. Ecol. Prog. S. 672:141-152. https://doi.org/10.3354/meps13807
+Rouzé H, Galand PE, Medina M, Bongaerts P, Pichon M, **Pérez-Rosales G**, Torda G, Moya A, Raina JB, Hédouin L. (2021) Symbiotic associations of the deepest recorded photosynthetic scleractinian coral (172 m depth). The ISME journal; 15(5):1564-8. https://doi.org/10.1038/s41396-020-00857-y
 
-Carlot J, Rouzé H, Barneche DR, Mercière A, Espiau B, Cardini U, Brandl DJ, Casey JM, Pérez-Rosales G, Adjeroud M, Hédouin L, Parravicini V. (2022) Scaling up calcification, respiration, and photosynthesis rates of six prominent coral taxa. Ecology and Evolution https://doi.org/10.1002/ece3.8613 
+Moritz C, Brandl SJ, Rouzé H, Vii J, **Pérez-Rosales G**, Bosserelle P, Chancerelle Y, Galzin R, Liao V, Siu G, Taiarui M, Nugues MM, Hédouin L. (2021) Long-term monitoring of benthic communities reveals spatial determinants of disturbance and recovery dynamics on coral reefs. Mar. Ecol. Prog. S. 672:141-152. https://doi.org/10.3354/meps13807
 
-Pérez-Rosales G, Hernández-Agreda A, Bongaerts P, Rouzé H, Pichon M, Carlot J, Torda G, UTP Consortium, Hédouin L, Parravicini V. (2022) Mesophotic depths hide high coral cover communities in French Polynesia. Science of the Total Environment https://doi.org/10.1016/j.scitotenv.2022.157049 
+Carlot J, Rouzé H, Barneche DR, Mercière A, Espiau B, Cardini U, Brandl DJ, Casey JM, **Pérez-Rosales G**, Adjeroud M, Hédouin L, Parravicini V. (2022) Scaling up calcification, respiration, and photosynthesis rates of six prominent coral taxa. Ecology and Evolution https://doi.org/10.1002/ece3.8613 
+
+Raick X, Di Iorio L, Lecchini D, Gervaise C, Hédouin L, **Pérez-Rosales G**, Rouzé H, Bertucci F, Parmentier É. (2023) Fish sounds of photic and mesophotic coral reefs: variation with depth and type of island. Coral Reefs https://doi.org/10.1007/s00338-022-02343-7
 
 
 ## International conferences and workshops
